# sr1_robotarm

./: README.md
sr1_3dof_urdf_arm_group_ikfast_plugin/: .update_ikfast_plugin.sh.swp  CMakeLists.txt  package.xml  sr1_3dof_urdf_arm_group_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
sr1_3dof_urdf_arm_group_ikfast_plugin/src/: sr1_3dof_urdf_arm_group_ikfast_moveit_plugin.cpp  sr1_3dof_urdf_arm_group_ikfast_solver.cpp
sr1_3dof_urdf_description/: CMakeLists.txt  package.xml
sr1_3dof_urdf_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
sr1_3dof_urdf_description/meshes/: Pointer_v2_1.stl  arm_servo1_1.stl  arm_servo2_1.stl  arm_servo3_1.stl  base_link.stl  gripper_1.stl  gripper_arm_1.stl  link1_1.stl  link2_1.stl  link3_1.stl  (+7 more)
sr1_3dof_urdf_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sr1_6dof_urdf_description/: CMakeLists.txt  package.xml
sr1_6dof_urdf_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sr1_6dof_urdf_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ros_controllers.yaml  sr1_6dof_urdf.srdf
sr1_6dof_urdf_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  sr1_6dof_urdf_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml
(+67 files in other folders)
